<?xml version="1.0"?>
<package>
  <name>gazebo_logical_camera_plugin_ros</name>
  <version>0.0.0</version>
  <description>The gazebo_logical_camera_plugin_ros package</description>

  <maintainer email="amos.smith@dfki.de">Amos Smith</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_version_helpers</build_depend>
  <build_depend>object_pose_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_version_helpers</run_depend>
  <run_depend>object_pose_msgs</run_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
